...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                >

                <LinearLayout
                    android:id="@+id/available_bookings_dates_scroll_view_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                </LinearLayout>

...
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                >

                <com.handy.portal.bookings.ui.element.BookingListView
                    android:id="@+id/available_jobs_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/list_divider"
                    android:dividerHeight="1dp"
                    />

...
