<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/extra_margin_medium"
    android:orientation="vertical"
    >

    <include layout="@layout/divider_dashboard"/>

    <RelativeLayout
        android:id="@+id/tier_option"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dashboard_option_height"
        android:layout_marginTop="@dimen/dashboard_option_top_margin"
        android:background="@drawable/background_list_entry"
        android:clickable="true"
        android:padding="@dimen/default_padding"
        >

        <!-- TODO: Dynamic tiers after working API, remove hardoding -->
        <TextView
            style="@style/TextView.Medium.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="Tier 1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tier_chevron"
            android:layout_toStartOf="@+id/tier_chevron"
            android:textColor="@color/tertiary_grey"
            android:textSize="@dimen/large_text_size"
            tools:text="$15"
            />

        <ImageView
            android:id="@+id/tier_chevron"
            android:layout_width="@dimen/dashboard_chevron_width_height"
            android:layout_height="@dimen/dashboard_chevron_width_height"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:src="@drawable/ic_chevron_dashboard_grey"
            />

    </RelativeLayout>

    <include layout="@layout/divider_dashboard"/>

    <RelativeLayout
        android:id="@+id/feedback_option"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dashboard_option_height"
        android:layout_marginTop="@dimen/dashboard_option_top_margin"
        android:background="@drawable/background_list_entry"
        android:clickable="true"
        android:paddingBottom="@dimen/extra_padding_xlarge"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:paddingTop="@dimen/extra_padding_xlarge"
        >

        <TextView
            style="@style/TextView.Medium.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/feedback"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/feedback_chevron"
            android:layout_toStartOf="@+id/feedback_chevron"
            android:textColor="@color/error_red"
            android:textSize="@dimen/large_text_size"
            tools:text="Quality of Service"
            />

        <ImageView
            android:id="@+id/feedback_chevron"
            android:layout_width="@dimen/dashboard_chevron_width_height"
            android:layout_height="@dimen/dashboard_chevron_width_height"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:src="@drawable/ic_chevron_dashboard_grey"
            />

    </RelativeLayout>

    <include layout="@layout/divider_dashboard"/>

    <LinearLayout
        android:id="@+id/reviews_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_list_entry"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dashboard_option_height"
            android:layout_marginTop="@dimen/dashboard_option_top_margin"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingTop="@dimen/extra_padding_xlarge"
            >

            <TextView
                android:id="@+id/five_star_reviews_text"
                style="@style/TextView.Medium.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/five_star_reviews"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/reviews_chevron"
                android:layout_toStartOf="@+id/reviews_chevron"
                android:textColor="@color/tertiary_grey"
                android:textSize="@dimen/large_text_size"
                tools:text="18"
                />

            <ImageView
                android:id="@+id/reviews_chevron"
                android:layout_width="@dimen/dashboard_chevron_width_height"
                android:layout_height="@dimen/dashboard_chevron_width_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:src="@drawable/ic_chevron_dashboard_grey"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/extra_padding_xlarge"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            >

            <include layout="@layout/element_five_stars"/>

            <TextView
                android:id="@+id/review_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_star_review_text_margin"
                android:lineSpacingExtra="@dimen/line_spacing_dashboard"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size"
                tools:text="Jane is the best! Everything is spotless. We are happy with the cleaning."
                />

            <TextView
                android:id="@+id/review_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/extra_padding"
                android:textColor="@color/tertiary_grey"
                android:textSize="@dimen/small_text_size"
                tools:text="Sam, May 2015"
                />
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/divider_dashboard"/>

</LinearLayout>
