...
        android:checked="false"
        android:drawableTop="@drawable/notification_icon_with_badge"
        android:text="@string/tab_notifications"
        />

    <com.handy.portal.ui.widget.DimRadioButton
        android:id="@+id/button_more"
        style="@style/TabButton"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:drawableTop="@drawable/ic_menu_more"
        android:text="@string/tab_more"
        />
...
